Add some function to strip space.
